--- a/publication/x-platform-phishing/index.html
+++ b/publication/x-platform-phishing/index.html
@@ -285,7 +285,7 @@
 
 
 
-<a class="btn btn-primary btn-outline" href="http://toannv.com/X-Platform_Phishing.pdf" target="_blank">
+<a class="btn btn-primary btn-outline" href="https://toannguyen.me/X-Platform_Phishing.pdf" target="_blank">
   PDF
 </a>
 
@@ -340,7 +340,7 @@
   <div class="container">
     <p class="powered-by">
 
-      &copy; 2020 Toan Nguyen &middot; 
+      &copy; 2021 Toan Nguyen &middot; 
 
       Powered by the <a href="https://github.com/gcushen/hugo-academic" target="_blank">Academic
       theme</a> for <a href="http://gohugo.io" target="_blank">Hugo</a>.
